--- a/publication/gohari-2020-blending/cite.bib
+++ b/publication/gohari-2020-blending/cite.bib
@@ -1,6 +1,6 @@
 @article{gohari2020blending,
  author = {Gohari, Parham and Djeumou, Franck and Vinod, Abraham P and Topcu, Ufuk},
- journal = {arXiv preprint arXiv:2007.15755},
+ journal = {To appear at the 2022 American Control Conference (ACC)},
  title = {Blending Controllers via Multi-Objective Bandits},
  year = {2020}
 }
