update papers + cv

--- a/publication/gohari-2020-blending/cite.bib
+++ b/publication/gohari-2020-blending/cite.bib
@@ -1,7 +1,7 @@
-@article{gohari2020blending,
+@inproceedings{gohari2020blending,
  author = {Gohari, Parham and Djeumou, Franck and Vinod, Abraham P and Topcu, Ufuk},
- journal = {To appear at the 2022 American Control Conference (ACC)},
+ booktitle = {American Control Conference (ACC)},
  title = {Blending Controllers via Multi-Objective Bandits},
- year = {2020}
+ url = {https://ieeexplore.ieee.org/document/9867486},
+ year = {2022}
 }
-
