--- a/publication/learning-to-control-one-trial/cite.bib
+++ b/publication/learning-to-control-one-trial/cite.bib
@@ -1,7 +1,7 @@
-@article{djeumou2021learning,
+@inproceedings{djeumou2021learning,
  author = {Djeumou, Franck and Topcu, Ufuk},
- journal = {arXiv preprint arXiv:2106.10533},
+ booktitle = {Learning for Dynamics and Control Conference (L4DC)},
  title = {Learning to Reach, Swim, Walk and Fly in One Trial: Data-Driven Control with Scarce Data and Side Information},
- year = {2021}
+ url = {https://proceedings.mlr.press/v168/djeumou22b/djeumou22b.pdf},
+ year = {2022}
 }
-
