--- a/publication/on-the-fly-control-journal/cite.bib
+++ b/publication/on-the-fly-control-journal/cite.bib
@@ -1,7 +1,7 @@
-@article{djeumou2020fly,
+@inproceedings{djeumou2020fly,
  author = {Djeumou, Franck and Vinod, Abraham P and Goubault, Eric and Putot, Sylvie and Topcu, Ufuk},
- journal = {arXiv preprint arXiv:2011.05524},
+ booktitle = {IEEE Transactions on Automatic Control (IEEE TAC)},
  title = {On-The-Fly Control of Unknown Systems: From Side Information to Performance Guarantees through Reachability},
- year = {2020}
+ url = {https://ieeexplore.ieee.org/document/9930630},
+ year = {2022}
 }
-
