--- a/publication/physics-informed-nn-architectures/cite.bib
+++ b/publication/physics-informed-nn-architectures/cite.bib
@@ -1,7 +1,7 @@
-@article{djeumou2021neural,
+@inproceedings{djeumou2021neural,
  author = {Djeumou, Franck and Neary, Cyrus and Goubault, Eric and Putot, Sylvie and Topcu, Ufuk},
- journal = {arXiv preprint arXiv:2109.06407},
+ booktitle = {Learning for Dynamics and Control Conference (L4DC)},
  title = {Neural Networks with Physics-Informed Architectures and Constraints for Dynamical Systems Modeling},
- year = {2021}
+ url = {https://proceedings.mlr.press/v168/djeumou22a/djeumou22a.pdf},
+ year = {2022}
 }
-
