--- a/publication/task-guided-irl-pomdps/cite.bib
+++ b/publication/task-guided-irl-pomdps/cite.bib
@@ -1,7 +1,7 @@
-@article{djeumou2021task,
+@inproceedings{djeumou2021task,
  author = {Djeumou, Franck and Cubuktepe, Murat and Lennon, Craig and Topcu, Ufuk},
- journal = {arXiv preprint arXiv:2105.14073},
+ booktitle = {International Conference on Automated Planning and Scheduling (ICAPS)},
  title = {Task-Guided Inverse Reinforcement Learning Under Partial Information},
- year = {2021}
+ url = {https://ojs.aaai.org/index.php/ICAPS/article/view/19785},
+ year = {2022}
 }
-
