--- a/publication/taylor-lagrange-nodes/cite.bib
+++ b/publication/taylor-lagrange-nodes/cite.bib
@@ -1,8 +1,7 @@
-@misc{djeumou2022taylorlagrange,
- archiveprefix = {arXiv},
+@inproceedings{djeumou2022taylorlagrange,
+booktitle = {International Joint Conferences on Artificial Intelligence (IJCAI)},
  author = {Franck Djeumou and Cyrus Neary and Eric Goubault and Sylvie Putot and Ufuk Topcu},
- eprint = {2201.05715},
- primaryclass = {cs.LG},
+ url = {https://www.ijcai.org/proceedings/2022/0405.pdf},
  title = {Taylor-Lagrange Neural Ordinary Differential Equations: Toward Fast Training and Evaluation of Neural ODEs},
  year = {2022}
 }
