--- a/publication/wu-2020-policy/cite.bib
+++ b/publication/wu-2020-policy/cite.bib
@@ -1,7 +1,8 @@
-@article{wu2020policy,
+@inproceedings{wu2020policy,
  author = {Wu, Bo and Cubuktepe, Murat and Djeumou, Franck and Xu, Zhe and Topcu, Ufuk},
- journal = {arXiv preprint arXiv:2001.00835},
- title = {Policy synthesis for switched linear systems with Markov decision process switching},
- year = {2020}
+ booktitle = {IEEE Transactions on Automatic Control (IEEE TAC)},
+ title = {Policy Synthesis for Switched Linear Systems with Markov Decision Process Switching},
+ url = {https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9691772},
+%  publisher = {IEEE},
+ year = {2021}
 }
-
