--- a/publication/probablistic-swarm-control-journal/cite.bib
+++ b/publication/probablistic-swarm-control-journal/cite.bib
@@ -1,7 +1,7 @@
-@article{djeumou2021probabilistic,
+@inproceedings{djeumou2021probabilistic,
  author = {Djeumou, Franck and Xu, Zhe and Cubuktepe, Murat and Topcu, Ufuk},
- journal = {arXiv preprint arXiv:2106.15729},
- title = {Probabilistic control of heterogeneous swarms subject to graph temporal logic specifications: A decentralized and scalable approach},
+ booktitle = {IEEE Transactions on Automatic Control (IEEE TAC)},
+ title = {Probabilistic Control of Heterogeneous Swarms Subject to Graph Temporal Logic Specifications: A Decentralized and Scalable Approach},
+ url = {https://ieeexplore.ieee.org/document/9779942},
  year = {2021}
 }
-
