--- a/publication/autonomous-drifting-tire-modeling/cite.bib
+++ b/publication/autonomous-drifting-tire-modeling/cite.bib
@@ -1,7 +1,11 @@
-@inproceedings{djeumou2023icra,
- author = {Djeumou, Franck and Goh, Jonathan and Topcu, Ufuk and Balachandran, Avinash},
- booktitle = {IEEE International Conference on Robotics and Automation(ICRA)},
- title = {Autonomous Drifting with 3 Minutes of Data via Learned Tire Models},
- url = {Processing},
- year = {2023}
+@inproceedings{djeumou2023autonomous,
+  author={Djeumou, Franck and Goh, Jonathan and Topcu, Ufuk and Balachandran, Avinash},
+  booktitle={2023 International Conference on Robotics and Automation (ICRA)}, 
+  title={Autonomous Drifting with 3 Minutes of Data via Learned Tire Models}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={},
+  doi={},
+  url = {https://arxiv.org/abs/2306.06330},
 }
